ApiTest + Redireccionamiento + Reorganizacion carpetas

--- a/test/index.html
+++ b/test/index.html
@@ -46,8 +46,8 @@
     <!-- Importar el archivo de prueba usando módulos ES6 -->
     <script type="module">
       // Importar los archivos de prueba
-    import "./ui/character-renderer-test.js";
-    import "./ui/pagination-controller-test.js";
+      import "./ui/paginationTest.js";
+      import "./ui/renderTest.js";
 
       // Ejecutar las pruebas después de cargar el módulo
       window.addEventListener("load", function () {
