--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       }
     </style>
 
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./app/main.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
