Add pagination styles and improve header alignment for better mobile experience

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header-rm py-4 mb-4">
       <div class="container d-flex flex-column align-items-center">
         <img src="img/rick.ico" alt="Rick and Morty" width="64" height="64" class="mb-2" />
-        <h1 class="title-rm mb-0">Rick & Morty Characters</h1>
+        <h1 class="title-rm mb-0h text-center">Rick & Morty Characters</h1>
         <div class="d-flex gap-3 mt-3">
           <a href="/test/index.html" class="btn btn-outline-light btn-sm px-4 py-2 fw-bold shadow-sm btn-link">Test Runner</a>
           <a href="/mochawesome-report/report.html" class="btn btn-outline-light btn-sm px-4 py-2 fw-bold shadow-sm btn-link">Mochawesome Report</a>
@@ -40,7 +40,7 @@
           </form>
         </div>
       </section>
-      <section class="mb-2 py-2">
+      <section class="pagination-section mb-2 py-2">
         <div class="container">
           <div id="buttons" class="row justify-content-center align-items-center">
             <div id="left" class="col-4 justify-content-center row"></div>
